--- a/app/src/main/res/layout/aerial_settings.xml
+++ b/app/src/main/res/layout/aerial_settings.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8sp"
-                android:text="@string/lb_frequency_table_number"
+                android:text="@string/lb_scan_table"
                 android:textColor="@color/limed_spruce" />
 
             <TextView
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8sp"
-                android:text="@string/lb_scan_rate_seconds"
+                android:text="@string/lb_scan_rate"
                 android:textColor="@color/limed_spruce" />
 
             <TextView
