--- a/app/src/main/res/layout/connecting_receiver.xml
+++ b/app/src/main/res/layout/connecting_receiver.xml
@@ -47,10 +47,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/center">
 
-        <ImageView
-            android:id="@+id/check_avd_anim"
+        <ProgressBar
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/state_textView"
