--- a/app/src/main/res/layout/delete_frequencies.xml
+++ b/app/src/main/res/layout/delete_frequencies.xml
@@ -41,24 +41,18 @@
         android:layout_width="match_parent"
         android:layout_height="1sp"
         android:layout_marginHorizontal="16sp"
-        android:layout_marginBottom="16sp"
+        android:layout_marginTop="10sp"
         android:background="@color/light_gray"
         tools:ignore="SmallSp" />
 
-    <ScrollView
+    <ListView
+        android:id="@+id/frequencies_delete_listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        tools:ignore="NestedWeights">
-
-        <LinearLayout
-            android:id="@+id/select_frequencies_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16sp"
-            android:orientation="vertical" />
-
-    </ScrollView>
+        android:padding="16sp"
+        android:dividerHeight="16sp"
+        android:divider="@color/transparent"/>
 
     <Button
         android:id="@+id/delete_selected_frequencies_button"
