--- a/app/src/main/res/layout/merge_tables_scan.xml
+++ b/app/src/main/res/layout/merge_tables_scan.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/merge_tables_linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,6 +7,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/option_tables_textView"
         style="@style/subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,20 +16,14 @@
         android:text="@string/lb_select_table_merge"
         android:textColor="@color/black" />
 
-    <ScrollView
+    <ListView
+        android:id="@+id/tables_merge_listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        tools:ignore="NestedWeights">
-
-        <LinearLayout
-            android:id="@+id/select_tables_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16sp"
-            android:orientation="vertical" />
-
-    </ScrollView>
+        android:padding="16sp"
+        android:dividerHeight="16sp"
+        android:divider="@color/transparent"/>
 
     <Button
         android:id="@+id/merge_tables_button"
