--- a/app/src/main/res/layout/activity_receiver_update.xml
+++ b/app/src/main/res/layout/activity_receiver_update.xml
@@ -38,8 +38,7 @@
                     android:gravity="center"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/updating_receiver_imageView"
+                    <ProgressBar
                         android:layout_width="@dimen/line_height"
                         android:layout_height="@dimen/line_height"
                         android:layout_marginEnd="8sp" />
