--- a/app/src/main/res/layout/activity_set_transmitter_type.xml
+++ b/app/src/main/res/layout/activity_set_transmitter_type.xml
@@ -122,6 +122,7 @@
                                     style="@style/body_regular"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:text="0"
                                     android:textColor="@color/ebony_clay" />
 
                             </LinearLayout>
@@ -175,6 +176,7 @@
                                     style="@style/body_regular"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:text="0"
                                     android:textColor="@color/ebony_clay" />
 
                             </LinearLayout>
@@ -219,6 +221,7 @@
                                     style="@style/body_regular"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:text="0"
                                     android:textColor="@color/ebony_clay" />
 
                             </LinearLayout>
@@ -263,6 +266,7 @@
                                     style="@style/body_regular"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:text="@string/lb_none"
                                     android:textColor="@color/ebony_clay" />
 
                             </LinearLayout>
