--- a/app/src/main/res/layout/aerial_scanning.xml
+++ b/app/src/main/res/layout/aerial_scanning.xml
@@ -13,15 +13,24 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="16sp"
         android:layout_marginHorizontal="32sp"
-        android:gravity="center"
+        android:gravity="bottom"
         android:orientation="horizontal">
 
-        <TextView
-            style="@style/subtitle"
+        <ImageView
+            android:id="@+id/gps_aerial_imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/lb_scan_details"
-            android:textColor="@color/ebony_clay" />
+            android:background="@drawable/ic_gps_off"/>
+
+        <TextView
+            android:id="@+id/gps_state_aerial_textView"
+            style="@style/body_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="8sp"
+            android:gravity="bottom"
+            android:textColor="@color/ebony_clay"
+            android:visibility="gone"/>
 
         <Space
             android:layout_width="0dp"
@@ -135,11 +144,11 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/max_index_aerial_textView"
                     style="@style/body_small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8sp"
-                    android:text="@string/lb_table_index"
                     android:textColor="@color/limed_spruce" />
 
                 <LinearLayout
