--- a/app/src/main/res/layout/connecting_receiver.xml
+++ b/app/src/main/res/layout/connecting_receiver.xml
@@ -48,8 +48,16 @@
         app:layout_constraintTop_toBottomOf="@id/center">
 
         <ProgressBar
+            android:id="@+id/connecting_progressBar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/connected_imageView"
+            android:layout_width="@dimen/button_height"
+            android:layout_height="@dimen/button_height"
+            android:background="@drawable/circle_check"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/state_textView"
