--- a/app/src/main/res/layout/data_calculation_types.xml
+++ b/app/src/main/res/layout/data_calculation_types.xml
@@ -3,6 +3,7 @@
     android:id="@+id/data_calculation_types_linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_weight="1"
     android:orientation="vertical">
 
     <TextView
