--- a/app/src/main/res/layout/manual_scanning.xml
+++ b/app/src/main/res/layout/manual_scanning.xml
@@ -13,15 +13,22 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="16sp"
         android:layout_marginHorizontal="32sp"
+        android:gravity="bottom"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/saving_targets_textView"
-            style="@style/body_regular"
+        <ImageView
+            android:id="@+id/gps_manual_imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:text="@string/lb_saving_targets"
+            android:background="@drawable/ic_gps_off"/>
+
+        <TextView
+            android:id="@+id/state_manual_textView"
+            style="@style/body_regular"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="8sp"
+            android:gravity="bottom"
             android:textColor="@color/ebony_clay"
             android:visibility="gone" />
 
