--- a/app/src/main/res/layout/pulse_rate_values.xml
+++ b/app/src/main/res/layout/pulse_rate_values.xml
@@ -4,6 +4,7 @@
     android:id="@+id/pulse_rate_linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_weight="1"
     android:orientation="vertical">
 
     <TextView
